--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -9,21 +9,24 @@ html {
 }
 
 body {
-	padding: modular_scale(1) modular_scale(0);
+	position: relative;
+	padding: 0 modular_scale(0);
 	background: $color__background-body;
+	overflow-x: hidden;
 
 	@include mq($tablet) {
-		padding: modular_scale(1) modular_scale(2);
+		padding: 0 modular_scale(2);
 	}
 
 	@include mq($desktop) {
-		padding: modular_scale(1) modular_scale(3);
+		padding: 0 modular_scale(3);
 	}
 }
 
 header {
-	position: sticky;
-	top: 0;
+	z-index: 99999;
+	position: fixed;
+	right: modular_scale(3);	
 
 	.site-branding {
 		display: none;
@@ -31,8 +34,6 @@ header {
 }
 
 .main-section {
-	min-height: 100vh;
-
 	h2.section-title {
 		font-size: modular_scale(3);
 	}
