--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,6 +10,7 @@ body.home {
     main {
         .splash-page {
             position: relative;
+            min-height: 100vh;
 
             .text {
                 display: block;
