--- a/sass/template-parts/_project-overview.scss
+++ b/sass/template-parts/_project-overview.scss
@@ -1,21 +1,83 @@
-.tools {
-    margin-bottom: modular_scale(2);
+.main-section.overview {
+    .content {
+        width: 100%;
 
-    h3 {
-        font-size: modular_scale(1);
-    }
-
-    .tools-list{
-        display: flex;
-        flex-wrap: wrap;
-
-        .tool-type {
-            color: #{$color__text-med-light};
-            width: modular_scale(1);
+        @include mq($tablet) {
+            display: flex;
         }
-        
-        .tool {
-            margin-right: modular_scale(0);
+
+        .content-section {
+            @include mq($tablet) {
+                flex: 1; 
+            }
+
+            &.text {
+                margin-bottom: modular_scale(1);
+            }
+
+            &.aside {
+                @include mq($tablet) {
+                    margin-right: modular_scale(2);
+                }
+            }
+
+            &.text {
+                text-transform: uppercase;
+            }
+
+            h2, h3 {
+                margin: 0;
+                line-height: 1;
+            }
+
+            p {
+                text-transform: none;
+            }
+
+            img {
+                width: 100%;
+                height: 50vh;
+                object-fit: cover;
+
+                @include mq($tablet) {
+                    height: 100%;
+                }
+            }
+
+            .heading {
+                margin-bottom: modular_scale(2);
+
+                .project-title {
+                    font-size: modular_scale(3);
+                }
+
+                .project-info {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+
+                    .project-type {
+                        margin-right: modular_scale(-2);
+                        font-size: modular_scale(2);
+                    }
+
+                    .links {
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+
+                        a {
+                            margin-right: modular_scale(-2);
+                            font-size: modular_scale(1);
+                        }
+
+                        .button {
+                            padding: modular_scale(-2);
+                            font-size: modular_scale(-1);
+                        }
+                    }
+                }
+            }
         }
     }
 }
