--- a/sass/template-parts/_featured-project.scss
+++ b/sass/template-parts/_featured-project.scss
@@ -9,6 +9,8 @@
         }
 
         .content-section {
+            max-height: 50vh;
+
             @include mq($tablet) {
                 flex: 1; 
             }
@@ -19,6 +21,8 @@
             }
 
             &.aside {
+                overflow: hidden;
+
                 @include mq($tablet) {
                     margin-right: modular_scale(2);
                 }
@@ -39,8 +43,8 @@
 
             img {
                 width: 100%;
-                height: 50vh;
                 object-fit: cover;
+                object-position: 0 0;
 
                 @include mq($tablet) {
                     height: 100%;
