--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -17,12 +17,21 @@ address {
 pre {
 	background: $color__background-pre;
 	font-family: $font__pre;
-	@include font-size(0.9375);
 	line-height: $font__line-height-pre;
 	margin-bottom: 1.6em;
-	max-width: 100%;
-	overflow: auto;
+	max-width: em(1200);
+	overflow-y: scroll;
 	padding: 1.6em;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+pre::-webkit-scrollbar {
+	display: none;
+  }
+  
+/* Hide scrollbar for IE and Edge */
+pre {
+	-ms-overflow-style: none;
 }
 
 code, kbd, tt, var {
