--- a/style.css
+++ b/style.css
@@ -191,7 +191,13 @@ blockquote { margin: 0 1.5em; }
 
 address { margin: 0 0 1.5em; }
 
-pre { background: #cbcbcb; font-family: "Courier 10 Pitch", Courier, monospace; font-size: 15px; font-size: 0.9375rem; line-height: 1.6; margin-bottom: 1.6em; max-width: 100%; overflow: auto; padding: 1.6em; }
+pre { background: #cbcbcb; font-family: "Courier 10 Pitch", Courier, monospace; line-height: 1.6; margin-bottom: 1.6em; max-width: 75em; overflow-y: scroll; padding: 1.6em; }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+pre::-webkit-scrollbar { display: none; }
+
+/* Hide scrollbar for IE and Edge */
+pre { -ms-overflow-style: none; }
 
 code, kbd, tt, var { font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace; font-size: 15px; font-size: 0.9375rem; }
 
@@ -208,15 +214,13 @@ html { box-sizing: border-box; }
 
 *, *:before, *:after { /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */ box-sizing: inherit; }
 
-body { position: relative; padding: 0 1em; background: #E6E6E6; overflow-x: hidden; }
+body { position: relative; background: #E6E6E6; overflow-x: hidden; }
 
-@media (min-width: 47.5em) { body { padding: 0 2.617924em; } }
-
-@media (min-width: 78.125em) { body { padding: 0 4.235801032em; } }
-
-header { z-index: 99999; position: fixed; right: 4.235801032em; }
+header { z-index: 99999; position: fixed; padding: 0 4.235801032em; width: 100%; background-color: #242021; }
 
 header .site-branding { display: none; }
+
+.main-section { padding: 0 4.235801032em; }
 
 .main-section h2.section-title { font-size: 4.235801032em; }
 
@@ -425,9 +429,13 @@ embed, iframe, object { max-width: 100%; }
 
 @media (min-width: 47.5em) { .featured-project .content { display: flex; } }
 
+.featured-project .content .content-section { max-height: 50vh; }
+
 @media (min-width: 47.5em) { .featured-project .content .content-section { flex: 1; } }
 
 .featured-project .content .content-section.text, .featured-project .content .content-section.text-hover { margin-bottom: 1.618em; }
+
+.featured-project .content .content-section.aside { overflow: hidden; }
 
 @media (min-width: 47.5em) { .featured-project .content .content-section.aside { margin-right: 2.617924em; } }
 
@@ -437,7 +445,7 @@ embed, iframe, object { max-width: 100%; }
 
 .featured-project .content .content-section h2, .featured-project .content .content-section h3 { margin: 0; line-height: 1; }
 
-.featured-project .content .content-section img { width: 100%; height: 50vh; -o-object-fit: cover; object-fit: cover; }
+.featured-project .content .content-section img { width: 100%; -o-object-fit: cover; object-fit: cover; -o-object-position: 0 0; object-position: 0 0; }
 
 @media (min-width: 47.5em) { .featured-project .content .content-section img { height: 100%; } }
 
@@ -516,12 +524,18 @@ body.home main .featured-projects ul { margin: 0; padding: 0; list-style: none; 
 
 .single-projects .overview { display: block; position: relative; color: #c08f33; }
 
-.single-projects .overview .full-width.background { position: absolute; top: 0; bottom: 0; width: 110vw; transform: translateX(-50%); background-color: #242021; z-index: -99; }
+.single-projects .overview .full-width.background { position: absolute; top: 0; bottom: 0; width: 200vw; transform: translateX(-50%); background-color: #242021; z-index: -99; }
 
-.single-projects .overview .content { padding: 11.0890051809em 4.235801032em; }
+.single-projects .overview .content { padding: 11.0890051809em 0; }
 
 .single-projects .tabs { display: flex; margin-top: 1.618em; }
 
-.single-projects .main-content { padding: 1em 11.0890051809em; background-color: white; }
+.single-projects .main-content h2 { margin-top: 0; }
+
+.single-projects .main-content .sub-section { padding: 1.618em; background-color: #fff; }
+
+@media (min-width: 47.5em) { .single-projects .main-content .sub-section { padding: 2.617924em; } }
+
+@media (min-width: 78.125em) { .single-projects .main-content .sub-section { padding: 4.235801032em; } }
 
 /*# sourceMappingURL=../highlights/sass/maps/style.css.map */
