--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,23 +1,20 @@
 body.home {
-    header {
-        .main-navigation {
-            li.menu-item-102 {
-                display: none;
-            }
-        }        
-    }
 
     main {
         .splash-page {
-            position: relative;
-            min-height: 100vh;
+            .content {
+                display: block;
+                position: relative;
+                width: 100%;
+                min-height: 100vh;
+            }
 
             .text {
                 display: block;
                 position: absolute;
                 top: 50%;
                 transform: translateY(-50%);
-                width: 100%;
+                max-width: em(1200);
 
                 .section-heading {
                     margin: 0;
@@ -53,8 +50,7 @@ body.home {
                 position: absolute;
                 left: 50%;
                 bottom: 0;
-                transform: translateX(-50%);
-                padding-bottom: modular_scale(2);
+                transform: translate(-50%, -50%);
                 font-size: modular_scale(2);
                 color: $color__text-med-light;
             }
