--- a/style.css
+++ b/style.css
@@ -179,9 +179,9 @@ template { display: none; }
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-body, button, input, select, optgroup, textarea { color: #0e0d0d; font-family: sans-serif; font-size: 16px; font-size: 1rem; line-height: 1.5; }
+body, button, input, select, optgroup, textarea { color: #0F0E0E; font-family: sans-serif; font-size: 16px; font-size: 1rem; line-height: 1.5; }
 
-h1, h2, h3, h4, h5, h6 { clear: both; color: #c08f33; }
+h1, h2, h3, h4, h5, h6 { clear: both; color: #C29034; }
 
 p { margin-bottom: 1.5em; }
 
@@ -191,7 +191,7 @@ blockquote { margin: 0 1.5em; }
 
 address { margin: 0 0 1.5em; }
 
-pre { background: #cbcbcb; font-family: "Courier 10 Pitch", Courier, monospace; line-height: 1.6; margin-bottom: 1.6em; max-width: 75em; overflow-y: scroll; padding: 1.6em; }
+pre { background: #CCCCCC; font-family: "Courier 10 Pitch", Courier, monospace; line-height: 1.6; margin-bottom: 1.6em; max-width: 75em; overflow-y: scroll; padding: 1.6em; }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 pre::-webkit-scrollbar { display: none; }
@@ -216,15 +216,21 @@ html { box-sizing: border-box; }
 
 body { position: relative; background: #E6E6E6; overflow-x: hidden; }
 
-header { z-index: 99999; position: fixed; padding: 0 4.235801032em; width: 100%; background-color: #242021; }
+header { z-index: 99999; position: fixed; padding: 0 1.618em; padding-top: 0.6180469716em; width: 100%; background-color: rgba(36, 32, 33, 0.85); }
 
-header .site-branding { display: none; }
+@media (min-width: 47.5em) { header { padding: 0 2.617924em; } }
 
-.main-section { padding: 0 4.235801032em; }
+@media (min-width: 78.125em) { header { padding: 0 4.235801032em; } }
+
+.main-section { padding: 0 1.618em; }
+
+@media (min-width: 47.5em) { .main-section { padding: 0 2.617924em; } }
+
+@media (min-width: 78.125em) { .main-section { padding: 0 4.235801032em; } }
 
 .main-section h2.section-title { font-size: 4.235801032em; }
 
-hr { background-color: #cbcbcb; border: 0; height: 1px; margin-bottom: 1.5em; }
+hr { background-color: #CCCCCC; border: 0; height: 1px; margin-bottom: 1.5em; }
 
 ul, ol { margin: 0 0 1.5em 3em; }
 
@@ -253,7 +259,7 @@ button:hover, button:focus, button:active, input[type="button"]:hover, input[typ
 
 input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], input[type="number"], input[type="tel"], input[type="range"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="color"], textarea { color: #242021; border: 1px solid #ccc; border-radius: 3px; padding: 3px; }
 
-input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="number"]:focus, input[type="tel"]:focus, input[type="range"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="time"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="color"]:focus, textarea:focus { color: #c08f33; }
+input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="number"]:focus, input[type="tel"]:focus, input[type="range"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="time"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="color"]:focus, textarea:focus { color: #C29034; }
 
 select { border: 1px solid #ccc; }
 
@@ -265,9 +271,9 @@ textarea { width: 100%; }
 /*--------------------------------------------------------------
 ## Links
 --------------------------------------------------------------*/
-a { color: #c08f33; }
+a { color: #C29034; }
 
-a:visited { color: #c08f33; }
+a:visited { color: #C29034; }
 
 a:hover, a:focus, a:active { color: #242021; }
 
@@ -278,30 +284,17 @@ a:hover, a:active { outline: 0; }
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
-.main-navigation { display: block; width: 100%; }
-
-.main-navigation ul { display: flex; margin: 0; padding: 0; list-style: none; }
-
-.main-navigation ul.nav-menu { display: flex; align-items: center; }
-
-.main-navigation ul.nav-menu li { flex: 1; }
-
-.main-navigation ul.sub-menu { display: block; }
-
-.main-navigation ul.sub-menu li { float: right; padding-left: 1.618em; }
+.main-navigation { display: flex; justify-content: space-between; align-items: center; width: 100%; }
 
 .main-navigation a { display: block; font-size: 1.618em; text-decoration: none; }
 
+.main-navigation .custom-logo { padding-top: 0.3819820591em; max-width: 1.5625em; }
+
+.main-navigation .nav { display: flex; margin: 0; padding: 0; list-style: none; }
+
+.main-navigation .nav .nav-item { margin-left: 1.618em; }
+
 .main-navigation .icon-link .icon { font-size: 1.618em; }
-
-.main-navigation .menu-toggle { display: none; }
-
-/* Small menu. */
-.site-main .comment-navigation, .site-main .posts-navigation, .site-main .post-navigation { margin: 0 0 1.5em; overflow: hidden; }
-
-.comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous { float: left; width: 50%; }
-
-.comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next { float: right; text-align: right; width: 50%; }
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -419,7 +412,7 @@ embed, iframe, object { max-width: 100%; }
 
 .tools .tools-list { display: flex; flex-wrap: wrap; margin: 0; padding: 0; list-style: none; }
 
-.tools .tools-list .tool-type { color: #c08f33; width: 1.618em; }
+.tools .tools-list .tool-type { color: #C29034; width: 1.618em; }
 
 .tools .tools-list .tool { margin-right: 1em; }
 
@@ -500,11 +493,9 @@ embed, iframe, object { max-width: 100%; }
 /*--------------------------------------------------------------
 # Pages
 --------------------------------------------------------------*/
-body.home header .main-navigation li.menu-item-102 { display: none; }
+body.home main .splash-page .content { display: block; position: relative; width: 100%; min-height: 100vh; }
 
-body.home main .splash-page { position: relative; min-height: 100vh; }
-
-body.home main .splash-page .text { display: block; position: absolute; top: 50%; transform: translateY(-50%); width: 100%; }
+body.home main .splash-page .text { display: block; position: absolute; top: 50%; transform: translateY(-50%); max-width: 75em; }
 
 body.home main .splash-page .text .section-heading { margin: 0; font-size: 2.617924em; line-height: 1; }
 
@@ -518,11 +509,11 @@ body.home main .splash-page .text .section-subheading { margin: 0; font-size: 1.
 
 @media (min-width: 78.125em) { body.home main .splash-page .text .section-subheading { font-size: 4.235801032em; } }
 
-body.home main .splash-page .scroll-down { display: block; position: absolute; left: 50%; bottom: 0; transform: translateX(-50%); padding-bottom: 2.617924em; font-size: 2.617924em; color: #c08f33; }
+body.home main .splash-page .scroll-down { display: block; position: absolute; left: 50%; bottom: 0; transform: translate(-50%, -50%); font-size: 2.617924em; color: #C29034; }
 
 body.home main .featured-projects ul { margin: 0; padding: 0; list-style: none; }
 
-.single-projects .overview { display: block; position: relative; color: #c08f33; }
+.single-projects .overview { display: block; position: relative; color: #C29034; }
 
 .single-projects .overview .full-width.background { position: absolute; top: 0; bottom: 0; width: 200vw; transform: translateX(-50%); background-color: #242021; z-index: -99; }
 
