--- a/sass/template-parts/_project-overview.scss
+++ b/sass/template-parts/_project-overview.scss
@@ -49,6 +49,7 @@
 
                 .project-title {
                     font-size: modular_scale(3);
+                    color: $color__text-light;
                 }
 
                 .project-info {
